--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 	path = cmake/configs/uavcan_board_ident
 	url = https://github.com/PX4/uavcan_board_ident.git
 	branch = master
+[submodule "Tools/sys_id"]
+	path = Tools/sys_id
+	url = git@gitlab.ethz.ch:peterjo/sys_id.git
