--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -126,6 +126,7 @@ set(msg_files
 	vehicle_status_flags.msg
 	vtol_vehicle_status.msg
 	wind_estimate.msg
+	system_identification.msg
 	)
 
 if(NOT EXTERNAL_MODULES_LOCATION STREQUAL "")
