enhanced mode. output override not yet working. added own submodule for ecl.

--- a/.gitmodules
+++ b/.gitmodules
@@ -29,8 +29,8 @@
 	branch = master
 [submodule "src/lib/ecl"]
 	path = src/lib/ecl
-	url = https://github.com/PX4/ecl.git
-	branch = master
+	url = git@gitlab.ethz.ch:peterjo/ecl.git
+	branch = stable
 [submodule "cmake/cmake_hexagon"]
 	path = cmake/cmake_hexagon
 	url = https://github.com/ATLFlight/cmake_hexagon
